# mfbot-server

./: .env  Cargo.toml  mfbot.db-shm  mfbot.db-wal  post.lua  test.sh
.cargo/: config.toml
importer/: .env  Cargo.toml
importer/migrations/: 20250529211112_initial.sql
importer/src/: main.rs
migrations/: 20250524110246_init.sql  20250524110428_equipment.sql
src/: db.rs  lib.rs  main.rs
