[package]
name = "mfbot-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
log = "0.4.27"
sf-info-lib = { git = "https://github.com/the-marenga/sf-info-lib.git", version = "0.1.0" }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "*", features = ["cors"] }
tracing-subscriber = "0.3.19"
