[package]
name = "importer"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
futures = "0.3.31"
log = "0.4.27"
reqwest = { version = "0.12.18", features = ["gzip", "deflate", "brotli", "zstd", "json"] }
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["macros", "runtime-tokio", "sqlite"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs"] }
tracing-subscriber = "0.3.19"
zstd = "0.13.3"
